# cypheriel.codes

./: .gitignore  README.md  app.py  embed.py  flaskapp.wsgi  log.txt  pyproject.toml  requirements.txt
.github/workflows/: main.yml
static/: oembed_static.json
static/assets/: particles.json
static/styles/: highlightjs.css  html.css
templates/: 404.html  base.html  embed.html  index.html  oembed.html  paste.html
