[tool.poetry]
name = "cypheriel.codes"
version = "0.1.0"
description = ""
authors = ["Cypheriel <Mikel@hanger-84.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
